Fix flickering issue in Country Panel

--- a/frontend/src/topic/Country/components/CountryGeneral/styles.scss
+++ b/frontend/src/topic/Country/components/CountryGeneral/styles.scss
@@ -3,6 +3,7 @@
 
 .country-general {
     display: flex;
+    position: relative;
     flex-basis: 100%;
     flex-direction: column;
     flex-grow: 1;
